@@ -7,6 +7,7 @@
 - Add 'Ignore too few services complaint' option
 - Add 'Make plopped buildings historical' option
 - Current building selection (if any) is now pre-selected when opening settings panel
+- Double-clicking on a builing icon directly opens settings panel for that building
 - Building icons in ploppable panel now sorted by display name
 - Transition to on-demand thumbnail generation
 - Add submesh and sub-building rendering to preview images
